// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`break argument 0 1`] = `
Program {
  "children": Array [
    Break {
      "kind": "break",
      "level": Number {
        "kind": "number",
        "value": "0",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`break argument 1 1`] = `
Program {
  "children": Array [
    Break {
      "kind": "break",
      "level": Number {
        "kind": "number",
        "value": "1",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`break argument 2 1`] = `
Program {
  "children": Array [
    Break {
      "kind": "break",
      "level": Number {
        "kind": "number",
        "value": "2",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`break simple 1`] = `
Program {
  "children": Array [
    Break {
      "kind": "break",
      "level": null,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
